# hivemind

./: CMakeLists.txt
core/: api.cc
include/hivemind/: api.hh  capture.hh  event.hh
test/: test.cc
